--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="sloupec-levy">
       <h2>Levý sloupec</h2>
       <p>Toto je obsah levého sloupce. Můžete sem přidat text, obrázky nebo cokoli jiného.</p>
+      <img src="profil.jpg" alt="Popis obrázku" style="max-width:100%; height:auto;">
     </div>
     <div class="sloupec-pravy">
       <h2>Pravý sloupec</h2>
