--- a/index.html
+++ b/index.html
@@ -1,65 +1,28 @@
 <!DOCTYPE html>
-<html lang="cs">
-<head>
-  <meta charset="UTF-8">
-  <title>Můj první web</title>
-  <style>
-      /* ...existing code... */
-      body {
-        font-family: sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;       /* vodorovné centrování */
-        justify-content: flex-start; /* zarovnání od shora */
-        min-height: 100vh;
-        padding-top: 40px;         /* odsazení od horního okraje */
-        margin: 0;
-        background-color: #f4f4f4;
-      }
-      h1 {
-        color: #333;
-        margin: 0;
-      }
-      p.lead {
-        color: #555;
-        margin-top: 12px;
-        max-width: 720px;
-        text-align: center;
-      }
-      /* ...existing code... */
-      /*opisování css stylu z AI návodu*/
-      .sloupce {
-        display: flex;
-        gap: 20px;
-        max-width: 900px;
-        margin-top: 40px;
-      }
-      .sloupec-levy, .sloupec-pravy {
-        flex: 1;
-        background: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      }
-      .sloupec-levy h2, .sloupec-pravy h2 {
-        color: #333;
-        margin-top: 0;
-      }
-  </style>
+<html lang="cs"> <head>
+  <meta charset="UTF-8"> <title>Můj první web</title>
+  
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <h1>Můj první web</h1>
+  
   <p class="lead">Vítejte na mé první stránce. Tady může být krátký popis nebo uvítací text.</p>
+
   <div class="sloupce">
+    
     <div class="sloupec-levy">
       <h2>Levý sloupec</h2>
       <p>Toto je obsah levého sloupce. Můžete sem přidat text, obrázky nebo cokoli jiného.</p>
-      <img src="profil.jpg" alt="Popis obrázku" style="max-width:100%; height:auto;">
+      <img src="profil.jpg" alt="Popis obrázku" class="responzivni-obrazek">
     </div>
+
     <div class="sloupec-pravy">
       <h2>Pravý sloupec</h2>
       <p>Toto je obsah pravého sloupce. Můžete sem přidat text, obrázky nebo cokoli jiného.</p>
     </div>
+
   </div>
 </body>
 </html>
