Rename stylesheet from style.css to styl.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs"> <head>
   <meta charset="UTF-8"> <title>Můj první web</title>
   
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styl.css">
 </head>
 <body>
 
